# Simulations_Main

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROJECT_OVERVIEW.md  TODO_TRACKING.md  ideas.md  skills.md
.claude/: settings.local.json
config/: settings.json  theme.json
context/: CLAUDE.md  OwnerFeedback.md  PROJECT_PLAN_FOR_REAL_NATE_HERE.md  README.md  SoundDesignResearch.md  ideas.md
docs/: build_instructions.md
include/core/: AnimationSystem.h  Application.h  AudioManager.h  ConfigManager.h  MenuSystem.h  ThemeManager.h
include/simulations/pathfinding/astar/: AStarController.h  AStarVisualizer.h
include/simulations/sorting/quicksort/: QuicksortController.h  QuicksortVisualizer.h
learning/: README.md  cpp_concepts.md
phases/: phase1_completion_report.md
src/: main.cpp
src/core/: AnimationSystem.cpp  Application.cpp  AudioManager.cpp  ConfigManager.cpp  MenuSystem.cpp  ThemeManager.cpp
src/simulations/pathfinding/astar/: AStarController.cpp  AStarVisualizer.cpp
src/simulations/sorting/quicksort/: QuicksortColorLogic.md  QuicksortController.cpp  QuicksortVisualizer.cpp
